--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-.caixa {
-    background-color: chartreuse;
-    width: 100px;
-    height: 100px;
-    color: #ffffff;
+header{ 
+    background-color: aqua;
+    color: black;
 }
