--- a/style.css
+++ b/style.css
@@ -1,4 +1,21 @@
-header{ 
-    background-color: aqua;
-    color: black;
+*{
+    margin: 0%;
+    padding: 0%;
+}
+.cabecalho{ 
+    background-color: rgb(25, 22, 216);
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items:center;
+}
+
+.cabecalho-imagem{ 
+width: 20%;
+}
+
+.cabecalho-lista-item{
+    display: inline-block;
+    margin: 0% 16px;
+    font-size: 24px;
 }
