--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@
     color: white;
     display: flex;
     justify-content: space-around;
-    align-items:center;
+   /* align-items:center;*/
+
+
 }
 
 .cabecalho-imagem{ 
